--- a/templates/auto_answer.html
+++ b/templates/auto_answer.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block content %}
+<div>
+    <p>Ваша почта - {{email}}</p>
+    <p>Ваш класс - {{school_class}}</p>
+    <p>Мотивашка - {{about}}</p>
+
+</div>
+{% endblock %}
